# stm32_cmake_test

./: CMakeLists.txt  Readme.md
Drivers/: CMakeLists.txt
EWARM/: Project.ewp
MDK-ARM/: Project.uvoptx  Project.uvprojx
SW4STM32/STM32F767ZI-Nucleo/: .cproject  .project
